--- a/packages/package.json
+++ b/packages/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "create-react-junehyung",
+  "name": "create-react-app-junehyung",
   "version": "1.0.0",
   "description": "create junehyung-react-boilerplate",
   "bin": {
-    "create-react-junehyung": "./bin/generator.js"
+    "create-react-app-junehyung": "./bin/generator.js"
   },
   "private": false,
   "keywords": [
