--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
@@ -23,6 +24,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9.2.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
   }
