--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9.2.0",
+    "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.2",
     "typescript": "^5.4.5",
