--- a/react-boilerplate/.eslintrc.json
+++ b/react-boilerplate/.eslintrc.json
@@ -4,21 +4,24 @@
     "es2021": true
   },
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
-  "parser": "@typescript-eslint/parser",
+  "parser": "@typescript-eslint/parser", // Typescript파일을 파싱하기 위한 파서
   "parserOptions": {
-    "project": "./tsconfig.json",
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "project": "./tsconfig.json", // Typescript 프로젝트 설정 파일 경로
+    "ecmaVersion": "latest", // 최신 ECMAScript버전 사용
+    "sourceType": "module" // 모듈 시스템 사용
   },
-  "ignorePatterns": ["dist/", "node_modules/"],
+  "ignorePatterns": ["dist/", "node_modules/"], // 무시할 파일 및 디렉터리 파일
   "plugins": ["@typescript-eslint", "react", "prettier"],
   "rules": {
-    "react/react-in-jsx-scope": "off",
-    "no-undef": "error",
+    "react/jsx-uses-vars": "off", // 사용될 변수가 선언되지 않았다는 경고
+    "no-undef": "error", // 정의 되지 않은 변수 사용시 error
+    "@typescript-eslint/explicit-module-boundary-types": "off", // 모듈의 반환 타입을 명시적으로 지정하지 않아도 됨.
+    "@typescript-eslint/no-explicit-any": "warn", // any사용시 경고
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }], // _로 시작하는 변수를 허용해 사용되지 않는 매개변수로 인한 경고 피함.
     "prettier/prettier": [
       "error",
       {
-        "printWidth": 100,
+        "printWidth": 200,
         "semi": true,
         "singleQuote": true,
         "tabWidth": 2,
@@ -27,8 +30,13 @@
         "quoteProps": "preserve",
         "bracketSpacing": true,
         "endOfLine": "auto",
-        "traillingComma": "none"
+        "trailingComma": "none"
       }
     ]
+  },
+  "settings": {
+    "react":{
+      "version": "detect" // react버전을 자동으로 감지.
+    }
   }
 }
