--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -4,6 +4,7 @@
   "description": "Ceate React App By JuneHyung",
   "main": "index.js",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -13,7 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
@@ -21,12 +21,13 @@
   "devDependencies": {
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.2",
+    "sass-loader": "^16.0.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
+    "vite": "^5.4.7"
   }
 }
