--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Ceate React App By JuneHyung",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -16,18 +17,20 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@types/react": "^18.3.2",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.2.0",
+    "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5",
-    "sass": "^1.77.2",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.36.1",
+    "prettier": "^3.3.3",
+    "sass": "^1.79.3",
     "sass-loader": "^16.0.2",
-    "typescript": "^5.4.5",
+    "typescript": "^5.6.2",
     "vite": "^5.4.7"
   }
 }
